--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,3 +1,6 @@
+    <div ng-controller="AboutController">
+    </div>
+    
 
     <div class="container" ng-controller="IndexController">
         <div class="row row-content">
@@ -6,7 +9,16 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Featured Dish Here</h4>
+                <div class="media-left media-middle">
+                    <a ui-sref="app">
+                        <img class="media-object img-thumbnail" ng-src={{dish.image}} alt="Uthappizza"> </a>        
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">{{dish.name}}
+                        <span class="label label-danger">{{dish.label}}</span>
+                        <span class="badge">{{dish.price | currency}}</span></h2>
+                        <p >{{dish.description}}</p>
+                </div>
             </div>
         </div>
 
@@ -17,7 +29,15 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<h4>Implement the Promotion Here</h4>
+                <div class="media-left media-middle">
+                  <a ui-sref="app"> <img class="media-object img-thumbnail" ng-src={{promotion.image}} alt="promotion"> </a>    
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">{{promotion.name}}</h2>
+                     <span class="label label-danger">{{promotion.label}}</span>
+                        <span class="badge">{{dish.price | currency}}</span></h2>
+                    <p >{{promotion.description}}</p>
+                </div>
             </div>
         </div>
 
@@ -27,7 +47,18 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Executive Chef Info Here</h4>
+				 <div class="media-left media-middle">
+                    <a ui-sref="app">
+                        <img class="media-object img-thumbnail" ng-src={{leader.image}} alt="Uthappizza"> </a>        
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">{{leader.name + " "}}<span style="font-size:15px">{{leader.designation}}</span></h2>
+    
+                        <p >{{leader.description}}</p>
+                </div>
+
             </div>
         </div>
     </div>
+
+ 
