--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,4 @@
-    <div ng-controller="AboutController">
-    </div>
+   
     
 
     <div class="container" ng-controller="IndexController">
@@ -33,7 +32,7 @@
                   <a ui-sref="app"> <img class="media-object img-thumbnail" ng-src={{promotion.image}} alt="promotion"> </a>    
                 </div>
                 <div class="media-body">
-                    <h2 class="media-heading">{{promotion.name}}</h2>
+                    <h2 class="media-heading">{{promotion.name}}
                      <span class="label label-danger">{{promotion.label}}</span>
                         <span class="badge">{{dish.price | currency}}</span></h2>
                     <p >{{promotion.description}}</p>
@@ -56,7 +55,6 @@
     
                         <p >{{leader.description}}</p>
                 </div>
-
             </div>
         </div>
     </div>
