--- a/app/views/home.html
+++ b/app/views/home.html
@@ -32,6 +32,11 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
+
+                <div ng-if="!showPromotion">
+                    <h3>{{message}}</h3>
+                </div>
+                <div class="media" ng-if="showPromotion">
                 <div class="media-left media-middle">
                   <a ui-sref="app"> <img class="media-object img-thumbnail" ng-src={{promotion.image}} alt="promotion"> </a>    
                 </div>
@@ -40,6 +45,7 @@
                      <span class="label label-danger">{{promotion.label}}</span>
                         <span class="badge">{{dish.price | currency}}</span></h2>
                     <p >{{promotion.description}}</p>
+                </div>
                 </div>
             </div>
         </div>
