--- a/app/views/home.html
+++ b/app/views/home.html
@@ -56,6 +56,10 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+             <div ng-if="!showLeader">
+                    <h3>{{message}}</h3>
+                </div>
+                <div class="media" ng-if="showLeader">
 				 <div class="media-left media-middle">
                     <a ui-sref="app">
                         <img class="media-object img-thumbnail" ng-src={{leader.image}} alt="Uthappizza"> </a>        
@@ -64,6 +68,7 @@
                     <h2 class="media-heading">{{leader.name + " "}}<span style="font-size:15px">{{leader.designation}}</span></h2>
     
                         <p >{{leader.description}}</p>
+                </div>
                 </div>
             </div>
         </div>
